--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxtjs/axios": "^5.4.0",
     "cross-env": "^5.2.0",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
+    "sass-loader": "^7.1.0",
+    "sweetalert2": "^8.2.6",
     "vuetify": "^1.5.0",
     "vuetify-loader": "^1.2.0"
   },
