--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@adonisjs/websocket-client": "^1.0.9",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.4.0",
     "cross-env": "^5.2.0",
