--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@adonisjs/websocket-client": "^1.0.9",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.4.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "cross-env": "^5.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.11.0",
